fixed headshot and nav bar alignments and played around with fonts

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Indie+Flower);
+
 html {
   padding:0;
   background-color: #00a1ff;
@@ -21,14 +23,14 @@ header {
 h1 {
   margin:0;
   padding:0;
-  font-family: impact;
+  font-family:'Indie Flower', cursive;
   font-size: 46px;
   font-weight: bold;
   color:#00a1ff;
   text-align: center;
 }
 p.subtitle{
-  font-family: impact;
+  font-family: 'Indie Flower', cursive;
   text-align: center;
 }
 nav ul {
@@ -40,12 +42,13 @@ nav ul {
 	padding: 0 20px;
 	border-radius: 10px;  
 	list-style: none;
-	position: relative;
 	display: inline-table;
-  font-family: Tahoma;
+  font-family: 'Indie Flower';
   color:#00a1ff;
   font-weight: bold;
   text-align: center;
+	position: absolute;
+	left: 48%;
 }
 nav ul.main-nav li {
   display: block;
@@ -57,7 +60,7 @@ nav ul li:hover {
 h2 {
   margin:0;
   padding:0;
-  font-family: impact;
+  font-family: 'Indie Flower', cursive;
   font-size: 46px;
   font-weight: bold;
   color:#00a1ff;
@@ -67,7 +70,7 @@ h2 {
 h3 {
   margin:0;
   padding:0;
-  font-family: impact;
+  font-family:'Indie Flower', cursive;
   font-size: 30px;
   font-weight: bold;
   color:#00a1ff;
@@ -77,7 +80,7 @@ h3 {
   margin-bottom: 10px;
   padding: 0;
   color: black;
-  font-family: Tahoma;
+  font-family:'Indie Flower', cursive;
   text-align: center;
   font-weight: bold;
 }
@@ -85,7 +88,7 @@ h3 {
   margin-bottom: 10px;
   padding: 0;
   color: black;
-  font-family: Tahoma;
+  font-family: 'Indie Flower', cursive;
   float: center;
   font-weight: bold;
 }
@@ -128,7 +131,7 @@ section#about h2 {
 #about p.produced {
   text-align: left;
   font-size: 15px;
-  font-family: Tahoma;
+  font-family: 'Indie Flower', cursive;
 }
 /*Used border-radius to add a round border to the images*/
 img.headshot {
@@ -140,6 +143,7 @@ img.headshot {
     float: left;
   
 }
+
 ul.weybec-people {
     list-style-type: none;
     margin: 0;
@@ -147,8 +151,13 @@ ul.weybec-people {
     display: inline;
 }
 
+ul.weybec-people li {
+    display: inline-block;
+    width: 33%;
+    min-width: 100px;
+}
 h3 {
-  font-family: Tahoma;
+  font-family: 'Indie Flower', cursive;
 }
 
 #about {
@@ -162,7 +171,7 @@ h3 {
   margin-bottom: 10px;
   padding: 0;
   color: black;
-  font-family: Tahoma;
+  font-family: 'Indie Flower', cursive;
   text-align: center;
   font-weight: bold;
 }
@@ -172,7 +181,7 @@ h3 {
     color: pink;
 }
 footer {
-  font-family: Tahoma;
+  font-family: 'Indie Flower', cursive;
   margin 10px;
   background: rgba(165,167,167,1);
   font-size: 12px;
